--- a/.travis.yml
+++ b/.travis.yml
@@ -45,11 +45,16 @@ before_install:
 
 install:
   # Download datasets.
+  - pwd
   - pip install tqdm
   - tools/download_data_set.py
+  - ls data/
 
 script:
   # Finally, build all the examples.
+  - pwd
+  - ls
+  - ls data/
   - |
     for f in */Makefile; do
       dir=`dirname $f`;
