Try better output filtering.

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,8 @@ script:
       target_name=`grep 'TARGET := ' Makefile | awk -F ' := ' '{ print $2 }'`;
       echo "Make target $target_name in directory $dir.";
       make;
-      ./$target_name > target.log;
+      # Filter out "epoch in progress" lines.
+      ./$target_name | grep -v -- '\.] ';
       cd ../;
     done
 
