--- a/.travis.yml
+++ b/.travis.yml
@@ -73,12 +73,16 @@ script:
       make;
       # Filter out "epoch in progress" lines.
       ./$target_name | grep -v -- '\.] ';
-      if [ "$?" != "0" ]; then
+      if [ "${PIPESTATUS[0]}?" != "0" ]; then
+          echo "Example failed: $dir"
           echo "Example failed: $dir" >> ../faillog;
+      else
+          echo "Example succeeded; ${PIPESTATUS[0]}, ${PIPESTATUS[1]}";
       fi
       cd ../;
     done
   # Print any failures.
+  - ls
   - |
     if [ -f faillog ]; then
       echo "Some examples failed!";
