--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,18 @@ before_install:
   - sudo make install
   - cd ../
 
+  # Install cereal.
+  - cd $TRAVIS_BUILD_DIR
+  - wget https://github.com/USCiLab/cereal/archive/v1.3.0.tar.gz
+  - tar -xvzpf v1.3.0.tar.gz
+
   # Build mlpack.
   - cd $TRAVIS_BUILD_DIR
   - git clone https://github.com/mlpack/mlpack.git --depth 1
   - cd mlpack
   - mkdir build
   - cd build
-  - cmake -DCMAKE_INSTALL_PREFIX=/usr -DUSE_OPENMP=OFF -DBUILD_CLI_EXECUTABLES=OFF -DBUILD_JULIA_BINDINGS=OFF -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_MARKDOWN_BINDINGS=OFF -DBUILD_R_BINDINGS=OFF -DBUILD_TESTS=OFF ..
+  - cmake -DCMAKE_INSTALL_PREFIX=/usr -DUSE_OPENMP=OFF -DBUILD_CLI_EXECUTABLES=OFF -DBUILD_JULIA_BINDINGS=OFF -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_MARKDOWN_BINDINGS=OFF -DBUILD_R_BINDINGS=OFF -DBUILD_TESTS=OFF -DCEREAL_INCLUDE_DIR=$TRAVIS_BUILD_DIR/cereal-1.3.0/include/ ..
   - make -j2
   - sudo make install
   - cd ../
