Use administrative privileges to install cereal.

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
   - cd cereal-1.3.0
   - cmake -DCMAKE_INSTALL_PREFIX=/usr .
   - make
-  - make install
+  - sudo make install
 
   # Build mlpack.
   - cd $TRAVIS_BUILD_DIR
