Remove boost serialization from Makefile
Signed-off-by: Omar Shrit <omar@shrit.me>

--- a/lstm_electricity_consumption/Makefile
+++ b/lstm_electricity_consumption/Makefile
@@ -6,7 +6,7 @@
 
 TARGET := lstm_electricity_consumption
 SRC := lstm_electricity_consumption.cpp
-LIBS_NAME := armadillo mlpack boost_serialization
+LIBS_NAME := armadillo mlpack
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
