--- a/neural_network_regression/Makefile
+++ b/neural_network_regression/Makefile
@@ -6,7 +6,7 @@
 
 TARGET := nn_regression
 SRC := nn_regression.cpp
-LIBS_NAME := armadillo mlpack boost_serialization
+LIBS_NAME := armadillo mlpack
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
