Remove boost serialization
Signed-off-by: Omar Shrit <omar@shrit.me>

--- a/reinforcement_learning_gym/bipedal_walker_sac/Makefile
+++ b/reinforcement_learning_gym/bipedal_walker_sac/Makefile
@@ -6,7 +6,7 @@
 
 TARGET := bipedal_walker_sac
 SRC := bipedal_walker_sac.cpp
-LIBS_NAME := armadillo mlpack boost_serialization boost_iostreams
+LIBS_NAME := armadillo mlpack boost_iostreams
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
