--- a/reinforcement_learning_gym/cartpole_dqn/Makefile
+++ b/reinforcement_learning_gym/cartpole_dqn/Makefile
@@ -6,7 +6,7 @@
 
 TARGET := cartpole_dqn
 SRC := cartpole_dqn.cpp
-LIBS_NAME := armadillo mlpack boost_serialization boost_iostreams
+LIBS_NAME := armadillo mlpack boost_iostreams
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
