--- a/reinforcement_learning_gym/pendulum_sac/Makefile
+++ b/reinforcement_learning_gym/pendulum_sac/Makefile
@@ -6,7 +6,7 @@
 
 TARGET := pendulum_sac
 SRC := pendulum_sac.cpp
-LIBS_NAME := armadillo mlpack boost_serialization boost_iostreams
+LIBS_NAME := armadillo mlpack boost_iostreams
 
 CXX := g++
 CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
