--- a/.travis.yml
+++ b/.travis.yml
@@ -79,16 +79,16 @@ script:
       fi
 
       # TODO: the dataset appears to be in the wrong place.
-      if [ "$dir" == "lstm_stock_prediction" ];
-      then
-        continue;
-      fi
+      #if [ "$dir" == "lstm_stock_prediction" ];
+      #then
+      #  continue;
+      #fi
 
       # TODO: the prediction data appears to be the wrong size.
-      if [ "$dir" == "mnist_batch_norm" ];
-      then
-        continue;
-      fi
+      #if [ "$dir" == "mnist_batch_norm" ];
+      #then
+      #  continue;
+      #fi
 
       # TODO: the dataset cannot be loaded.
       if [ "$dir" == "mnist_vae_cnn" ];
