--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -36,10 +36,4 @@ dependencies:
 - r-ggplot2
 - r-irkernel=1.0
 # mlpack
-- cmake
-- armadillo
-- boost
-- armadillo
-- openblas
-- ensmallen
-- cereal
+- mlpack
