--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -26,7 +26,7 @@ dependencies:
 - pyyaml
 - traittypes==0.2.1
 - invoke=1.2
-- pandas-datareader==0.9
+- pandas-datareader
 # C++ Kernel
 - xeus-cling
 - xtensor
