Clean up some packages.

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -19,10 +19,9 @@ dependencies:
 - matplotlib=3.1
 - pandas=1
 - python=3.7
-- scikit-image=0.15
-- scikit-learn=0.21
-- seaborn=0.11
-- tensorflow=1.13
+- scikit-image
+- scikit-learn
+- seaborn
 - sympy=1.4
 - pyyaml
 - traittypes==0.2.1
