--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,7 +5,7 @@ dependencies:
 # Jupyter
 - jupyterlab=3
 - jupyter-offlinenotebook=0.2
-- nodejs=12
+- nodejs
 - nbconvert=6
 # Python Kernel
 - ipykernel=5.1
