Test whether SPAM example runs

--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,10 @@ script:
       cat faillog;
       exit 1;
     fi
-
+  # Make sure the spam tutorial runs correctly.
+  - cd spam/
+  - ./spam_classification.sh
+  - cd ../
 
 notifications:
   email:
