--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -17,7 +17,7 @@ dependencies:
 - bqplot=0.12.20
 - dask=2020.12
 - matplotlib=3.1
-- pandas=1
+- pandas
 - python=3.7
 - scikit-image
 - scikit-learn
