--- a/.ci/macos-steps.yaml
+++ b/.ci/macos-steps.yaml
@@ -25,7 +25,7 @@ steps:
     curl -O http://www.ratml.org/misc/armadillo-8.400.0.tar.gz -o armadillo-8.400.0.tar.gz
     tar xvzf armadillo-8.400.0.tar.gz
     cd armadillo-8.400.0
-    cmake -DCMAKE_INSTALL_PREFIX=/usr .
+    cmake .
     make
     sudo make install
     cd ../
@@ -37,7 +37,7 @@ steps:
     cd ensmallen-*/
     mkdir build
     cd build
-    cmake -DBUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=/usr ../
+    cmake -DBUILD_TESTS=OFF ../
     make
     sudo make install
     cd ../
@@ -47,7 +47,7 @@ steps:
     wget https://github.com/USCiLab/cereal/archive/v1.3.0.tar.gz
     tar -xvzpf v1.3.0.tar.gz
     cd cereal-1.3.0
-    cmake -DCMAKE_INSTALL_PREFIX=/usr .
+    cmake .
     make
     sudo make install
     cd ../
@@ -59,7 +59,7 @@ steps:
     cd mlpack
     mkdir build
     cd build
-    cmake -DCMAKE_INSTALL_PREFIX=/usr -DUSE_OPENMP=ON -DBUILD_CLI_EXECUTABLES=ON -DBUILD_JULIA_BINDINGS=OFF -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_MARKDOWN_BINDINGS=OFF -DBUILD_R_BINDINGS=OFF -DBUILD_TESTS=OFF ..
+    cmake -DUSE_OPENMP=ON -DBUILD_CLI_EXECUTABLES=ON -DBUILD_JULIA_BINDINGS=OFF -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_MARKDOWN_BINDINGS=OFF -DBUILD_R_BINDINGS=OFF -DBUILD_TESTS=OFF ..
     make -j2
     sudo make install
     cd ../
