--- a/.ci/linux-steps.yaml
+++ b/.ci/linux-steps.yaml
@@ -7,7 +7,7 @@ steps:
 # Set python version.
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '2.7'
+    versionSpec: '3.10'
 
 # Install build dependencies.
 - script: |
@@ -68,7 +68,10 @@ steps:
 
 # Download datasets.
 - script: |
-    pip install tqdm
+    python --version
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+    python --version
+    pip3 install tqdm
     cd tools/
     ./download_data_set.py
     cd ../
