--- a/.ci/linux-steps.yaml
+++ b/.ci/linux-steps.yaml
@@ -17,15 +17,15 @@ steps:
     mkdir deps/
     cd deps/
 
-    # Install Armadillo 8.400.0 (the oldest supported version).
-    curl -O http://www.ratml.org/misc/armadillo-8.400.0.tar.gz -o armadillo-8.400.0.tar.gz
-    tar xvzf armadillo-8.400.0.tar.gz
-    cd armadillo-8.400.0
+    # Install Armadillo 9.800.1 (the oldest supported version).
+    curl -O http://files.mlpack.org/armadillo-9.800.1.tar.gz -o armadillo-9.800.1.tar.gz
+    tar xvzf armadillo-9.800.1.tar.gz
+    cd armadillo-9.800.1
     cmake -DCMAKE_INSTALL_PREFIX=/usr .
     make
     sudo make install
     cd ../
-    rm -rf armadillo-8.400.0/
+    rm -rf armadillo-9.800.1/
 
     # Build and install the latest version of ensmallen.
     curl -O http://www.ensmallen.org/files/ensmallen-latest.tar.gz -o ensmallen-latest.tar.gz
