--- a/.ci/macos-steps.yaml
+++ b/.ci/macos-steps.yaml
@@ -47,9 +47,7 @@ steps:
     wget https://github.com/USCiLab/cereal/archive/v1.3.0.tar.gz
     tar -xvzpf v1.3.0.tar.gz
     cd cereal-1.3.0
-    cmake .
-    make
-    sudo make install
+    sudo cp -r include/cereal /usr/local/include/
     cd ../
     rm -rf cereal-1.3.0
 
