--- a/.ci/macos-steps.yaml
+++ b/.ci/macos-steps.yaml
@@ -65,6 +65,8 @@ steps:
     # Leave deps/.
     cd ../
 
+  displayName: "Install build dependencies"
+
 # Download datasets.
 - script: |
     pip install tqdm
@@ -72,6 +74,8 @@ steps:
     ./download_data_set.py
     cd ../
     ls data/
+
+  displayName: "Download datasets"
 
 # Now build the examples.
 - script: |
@@ -118,3 +122,5 @@ steps:
       cat faillog;
       exit 1;
     fi
+
+  displayName: "Run examples"
