--- a/.ci/macos-steps.yaml
+++ b/.ci/macos-steps.yaml
@@ -82,7 +82,7 @@ steps:
     for f in */Makefile; do
       dir=`dirname $f`;
       # Remove the -fopenmp flag from the Makefile.
-      sed -i 's/ -fopenmp//' $f;
+      sed -i '' 's/ -fopenmp//' $f;
 
       # TODO: this takes too long right now.
       if [ "$dir" == "mnist_cnn" ];
