--- a/.ci/linux-steps.yaml
+++ b/.ci/linux-steps.yaml
@@ -75,28 +75,31 @@ steps:
 
 # Now build the examples.
 - script: |
-    for f in ./examples/*/CPP/Makefile; do
-      dir=`dirname $f`;
+    cd examples/
+    for f in */CPP/Makefile; do
+      makefiledir=`dirname $f`;
+      dir=`dirname $makefiledir`;
 
       # TODO: this takes too long right now.
-      if [ "$dir" == "examples/mnist_cnn/CPP" ];
+      if [ "$dir" == "mnist_cnn" ];
       then
         continue;
       fi
 
       # TODO: the dataset cannot be loaded.
-      if [ "$dir" == "examples/mnist_vae_cnn/CPP" ];
+      if [ "$dir" == "mnist_vae_cnn" ];
       then
         continue;
       fi
 
       # TODO: the dataset cannot be loaded.
-      if [ "$dir" == "examples/spam/CLI" ];
+      if [ "$dir" == "spam" ];
       then
         continue;
       fi
 
       cd $dir;
+      cd CPP/;
       target_name=`grep 'TARGET := ' Makefile | awk -F ' := ' '{ print $2 }'`;
       echo "Make target $target_name in directory $dir.";
       make;
@@ -108,7 +111,7 @@ steps:
       else
         echo "Example succeeded; ${PIPESTATUS[0]}, ${PIPESTATUS[1]}";
       fi
-      cd ../;
+      cd ../../;
     done
 
     # Print any failures.
