--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -6,18 +6,22 @@
 
 TARGET := mnist_cnn
 SRC := mnist_cnn.cpp
-LIBS_NAME := armadillo mlpack
+LIBS_NAME := armadillo
 
 CXX := g++
-CXXFLAGS += -std=c++11 -Wall -Wextra -O3 -DNDEBUG -fopenmp
+CXXFLAGS += -std=c++14 -Wall -Wextra -O3 -DNDEBUG -fopenmp
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and
 # without optimizations.
-# CXXFLAGS += -std=c++11 -Wall -Wextra -g -O0
+# CXXFLAGS += -std=c++14 -Wall -Wextra -g -O0
 LDFLAGS  += -fopenmp
 LDFLAGS += -L . # /path/to/mlpack/library/  # if installed locally.
 # Add header directories for any includes that aren't on the
 # default compiler search path.
 INCLFLAGS := -I .
+# If you have mlpack or ensmallen installed somewhere nonstandard, uncomment and
+# update the lines below.
+# INCLFLAGS += -I/path/to/mlpack/include/
+# INCLFLAGS += -I/path/to/ensmallen/include/
 CXXFLAGS  += $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
