--- a/mnist_batch_norm/Makefile
+++ b/mnist_batch_norm/Makefile
@@ -28,13 +28,7 @@ LIBS := $(addprefix -l,$(LIBS_NAME))
 CLEAN_LIST := $(TARGET) $(OBJS)
 
 # default rule
-default: fail
-
-fail:
-	@echo "NOTE: this example does not currently build!"
-	@echo "The BatchNorm and PReLU layers have not yet been adapted to the "
-	@echo "mlpack 4 layer style.  See"
-	@echo "https://github.com/mlpack/mlpack/pull/2777 for more information."
+default: all
 
 $(TARGET): $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) $(LDFLAGS) $(LIBS)
