--- a/mnist_simple_f32/Makefile
+++ b/mnist_simple_f32/Makefile
@@ -4,8 +4,8 @@
 # If you're not using the Armadillo wrapper, replace `armadillo` with linker commands
 # for the BLAS and LAPACK libraries that you are using.
 
-TARGET := mnist_cnn
-SRC := mnist_cnn.cpp
+TARGET := mnist_simple_f32
+SRC := mnist_simple_f32.cpp
 LIBS_NAME := armadillo
 
 CXX := g++
@@ -13,8 +13,8 @@ CXXFLAGS += -std=c++14 -Wall -Wextra -O3 -DNDEBUG -fopenmp
 # Use these CXXFLAGS instead if you want to compile with debugging symbols and
 # without optimizations.
 # CXXFLAGS += -std=c++14 -Wall -Wextra -g -O0
+
 LDFLAGS  += -fopenmp
-LDFLAGS += -L . # /path/to/mlpack/library/  # if installed locally.
 # Add header directories for any includes that aren't on the
 # default compiler search path.
 INCLFLAGS := -I .
@@ -22,7 +22,7 @@ INCLFLAGS := -I .
 # update the lines below.
 # INCLFLAGS += -I/path/to/mlpack/include/
 # INCLFLAGS += -I/path/to/ensmallen/include/
-CXXFLAGS  += $(INCLFLAGS)
+CXXFLAGS += $(INCLFLAGS)
 
 OBJS := $(SRC:.cpp=.o)
 LIBS := $(addprefix -l,$(LIBS_NAME))
@@ -32,7 +32,7 @@ CLEAN_LIST := $(TARGET) $(OBJS)
 default: all
 
 $(TARGET): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) $(LDFLAGS) $(LIBS)
+	$(CXX) $(OBJS) -o $(TARGET) $(LDFLAGS) $(LIBS)
 
 .PHONY: all
 all: $(TARGET)
