Fix the path on the ci for the dataset
Signed-off-by: Omar Shrit <omar@avontech.fr>

--- a/.ci/linux-steps.yaml
+++ b/.ci/linux-steps.yaml
@@ -66,7 +66,7 @@ steps:
 # Download datasets.
 - script: |
     python -m pip install tqdm requests
-    cd tools/
+    cd scripts/
     ./download_data_set.py
     cd ../
     ls data/
