--- a/.ci/linux-steps.yaml
+++ b/.ci/linux-steps.yaml
@@ -73,19 +73,13 @@ steps:
 
   displayName: "Download datasets"
 
-# Now build the examples.
+# Now build the examples, only c++.
 - script: |
-    for f in */Makefile; do
+    for f in c++/*/*/*; do
       dir=`dirname $f`;
 
       # TODO: the dataset cannot be loaded.
-      if [ "$dir" == "mnist_vae_cnn" ];
-      then
-        continue;
-      fi
-
-      # TODO: the dataset cannot be loaded.
-      if [ "$dir" == "spam" ];
+      if [ "$dir" == "c++/neural_networks/mnist_vae_cnn" ];
       then
         continue;
       fi
